[package]
name = "deno_wry"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_runtime = "0.44.0"
wry = "0.13.1"
tokio = "1.10.1"
deno_core = "0.118.0"
serde = "1.0.129"
serde_json = "1.0.79"
uuid = "0.8.2"
eszip = "0.16.0"
log = "0.4.14"

[profile.release]
lto = true

[workspace]
members = [
    "compile"
]