[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
eszip = "0.16.0"
url = "2.2.2"
deno_graph = "0.23.0"
anyhow = "1.0.53"
deno_ast = "0.11.0"
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.14"
deno_runtime = "0.44.0"
deno_core = "0.118.0"
common = { path = "../common" }