[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_runtime = "0.47.0"
wry = "0.13.1"
tokio = "1.10.1"
deno_core = "0.121.0"
serde = { version = "1.0.136", features = ["derive"] }
uuid = "0.8.2"
eszip = "0.17.0"
log = "0.4.14"
deno_graph = "0.24.0"
directories = "4.0.1"